# BatchPolyfem

./: README.md  cconfig.json  config.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: lint.yml  tests.yml
notebooks/: 1.0_generate_noise.ipynb  2.0_generate_surfaces.ipynb  4.0_run_simulation.ipynb  5.0_analyse_simulation.ipynb
notebooks/config/: cube.msh  export.json
scenarios/: cube.json
src/: batch.py  config.py  kafka.py  minio.py  mongo.py  polyfem.py  run.py  schema.json  singleton.py
src/polyfem_schemas/: schema.json
surface/: cluster.py  config.py  displacement.py  generate.py  hmm.py  materials.py  noises.py  polyfem.py  requirement.txt  stats.py  storage.py  tetrahedron.py
tests/: test_config.py  test_kafka.py  test_minio.py  test_mongo.py  test_polyfem.py  test_run.py  test_singleton.py
