[tool.poetry]
name = "batchpolyfem"
version = "0.1.0"
description = "A robust infrastructure for performing batch simulations of frictional contact using Polyfem."
authors = ["Antoine Boucher <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
rich = "^13.0.0"
tqdm = "^4.64.1"
pymongo = "^4.3.3"
minio = "^7.1.2"
requests = "^2.28.1"
jsonschema = "^4.17.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
